# xwrits

./: .cvsignore  .gitignore  GESTURES  GESTURES.md  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  acconfig.h  clock.c  configure  configure.ac  configure.in  defaults.h  hands.c  lock.c  main.c  pictures.c  rest.c  rpm.spec  schedule.c  sourcecheckout.sh  warning.c  xwrits.1  xwrits.h  xwrits.man  xwrits.spec
icon/: gifs.c
large/: gifs.c
other/: gifs.c
