dnl Process this file with autoconf to produce a configure script.
AC_INIT(xwrits.h)
AM_INIT_AUTOMAKE(xwrits, 2.14)
AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_C_CONST
AC_C_INLINE

AC_ARG_ENABLE(warnings,
[  --enable-warnings       compile with -Wall],
if test "$enableval" = yes ; then
  CC="$CC -Wall"
fi)

AC_PATH_XTRA

dnl
dnl strerror()?
dnl

AC_REPLACE_FUNCS(strerror)

dnl
dnl gettimeofday()
dnl

AC_CACHE_CHECK(for gettimeofday prototype, ac_cv_gettimeofday,
[AC_TRY_COMPILE([#include <time.h>
#include <sys/time.h>],
[gettimeofday((void *)0, (void *)0);],
[AC_TRY_COMPILE([#include <time.h>
#include <sys/time.h>],
[gettimeofday((void *)0);],
ac_cv_gettimeofday=0,
ac_cv_gettimeofday=2)],
ac_cv_gettimeofday=1)])
AC_DEFINE_UNQUOTED(GETTIMEOFDAY_PROTO, $ac_cv_gettimeofday)

dnl
dnl Integer typedefs
dnl

AC_CACHE_CHECK(for integer typedefs, ac_cv_int_types,
[AC_EGREP_HEADER(u_int32_t, sys/types.h, ac_cv_int_types=yes,
  AC_EGREP_HEADER(uint32_t, sys/types.h, ac_cv_int_types=close,
   ac_cv_int_types=no))])

if test "$ac_cv_int_types" = no ;
then
  # Define our own versions
  AC_CACHE_CHECK(for a 16-bit value, ac_cv_int16,
  [AC_TRY_RUN([#include <stdio.h>
#include <stdlib.h>
int main(int argc, char **argv) {
  FILE *f = fopen("conftestval", "w");
  if (!f) exit(1);
  if (sizeof(short) == 2) fprintf(f, "short\n");
  else exit(1);
  fclose(f);
  exit(0);
}], ac_cv_int16=`cat conftestval`,
  AC_MSG_ERROR(no 16-bit value found),
  ac_cv_int16=short)])

  AC_CACHE_CHECK(for a 32-bit value, ac_cv_int32,
  [AC_TRY_RUN([#include <stdio.h>
#include <stdlib.h>
int main(int argc, char **argv) {
  FILE *f = fopen("conftestval", "w");
  if (!f) exit(1);
  if (sizeof(int) == 4) fprintf(f, "int\n");
  else if (sizeof(long) == 4) fprintf(f, "long\n");
  else exit(1);
  fclose(f);
  exit(0);
}], ac_cv_int32=`cat conftestval`, 
  AC_MSG_ERROR(no 32-bit value found),
  ac_cv_int32=int)])
fi

if test "$ac_cv_int_types" = no ;
then
  AC_DEFINE_UNQUOTED(u_int16_t, unsigned $ac_cv_int16)
  AC_DEFINE_UNQUOTED(u_int32_t, unsigned $ac_cv_int32)
  AC_DEFINE_UNQUOTED(int32_t, $ac_cv_int32)
elif test "$ac_cv_int_types" = close ;
then
  AC_DEFINE(NEED_SYS_TYPES_H)
  AC_DEFINE(u_int16_t, uint16_t)
  AC_DEFINE(u_int32_t, uint32_t)
else
  AC_DEFINE(NEED_SYS_TYPES_H)
fi

dnl
dnl Output
dnl

AC_OUTPUT(Makefile)
